# Problem-Solving-Online-Judges

./: .gitignore  CMakeLists.txt  My Template.cpp  README.md  in.txt  run.sh
Algorithm Templates/: Euler Path - Hierholzer Algorithm.cpp  KMP.cpp  Manacher's Algorithm.cpp
Bkash Interview/: problem1.cpp
Codechef/: CHFPARTY.cpp  Impressing Chefina.cpp  Roads in Chefland.cpp
Codeforces/: 1263-D. Secret Passwords.cpp  1266-A. Competitive Programmer.cpp  1266-B. Dice Tower.cpp  1266-C. Diverse Matrix.cpp  1266-E. Spaceship Solitaire.cpp  1271-A. Suits .cpp  1271-B. Blocks.cpp  1271-C. Shawarma Tent.cpp  1271-E. Common Number.cpp  1277-A. Happy Birthday, Polycarp!.cpp  1277-A. Happy Birthday, Polycarp.cpp  1277-B. Make Them Odd.cpp  1277-C. As Simple as One and Two.cpp  1277-D. Let's Play the Words.cpp  1281-A. Suffix Three.cpp  1281-B. Azamon Web Services.cpp  1281-C. Cut and Paste.cpp  Round-549-Div2-1143-C-Queen.cpp  Round-549-Div2-1143-D-The Beatles.cpp
InterviewBit/: Add One To Number.cpp  Longest Palindromic Substring.cpp  Minimum Characters required to make a String Palindromic.cpp
LeetCode/: 1. Two Sum.cpp  100. Same Tree.cpp  1004. Max Consecutive Ones III.cpp  1007. Minimum Domino Rotations For Equal Row.cpp  1008. Construct Binary Search Tree from Preorder Traversal .cpp  101. Symmetric Tree.cpp  1010. Knights in Chessboard.cpp  1010. Pairs of Songs With Total Durations Divisible by 60.cpp  104. Maximum Depth of Binary Tree.cpp  1041. Robot Bounded In Circle.cpp  1046. Last Stone Weight.cpp  105. Construct Binary Tree from Preorder and Inorder Traversal .cpp  1051. Height Checker.cpp  1057. Campus Bikes.cpp  106. Construct Binary Tree from Inorder and Postorder Traversal.cpp  1060. Missing Element in Sorted Array.cpp  11. Container With Most Water.cpp  1110. Delete Nodes And Return Forest.cpp  112. Path Sum.cpp  1120. Maximum Average Subtree.cpp  1129. Shortest Path with Alternating Colors.cpp  113. Path Sum II.cpp  1151. Minimum Swaps to Group All 1's Together.cpp  1161. Maximum Level Sum of a Binary Tree.cpp  1167. Minimum Cost to Connect Sticks.cpp  1169. Invalid Transactions.cpp  120. Triangle.cpp  121. Best Time to Buy and Sell Stock.cpp  1222. Queens That Can Attack the King.cpp  124. Binary Tree Maximum Path Sum.cpp  1249. Minimum Remove to Make Valid Parentheses.cpp  125. Valid Palindrome.cpp  128. Longest Consecutive Sequence.cpp  129. Sum Root to Leaf Numbers.cpp  1310. XOR Queries of a Subarray .cpp  136. Single Number.cpp  1375. Bulb Switcher III.cpp  138. Copy List with Random Pointer.cpp  139. Word Break.cpp  146. LRU Cache.cpp  (+139 more)
LightOJ/: 1000 - Greetings from LightOJ.cpp  1001 - Opposite Task.cpp  1004 - Monkey Banana Problem.cpp  1005 - Rooks.cpp  1006 - Hex-a-bonacci.cpp  1007 - Mathematically Hard.cpp  1008 - Fibsieve`s Fantabulous Birthday.cpp  1009 - Back to Underworld.cpp  1010 - Knights in Chessboard.cpp  1011 - Marriage Ceremonies.cpp  1012 - Guilty Prince.cpp  1013 - Love Calculator.cpp  1014 - Ifter Party.cpp  1015 - Brush (I).cpp  1017 - Brush (III).cpp  1020 - A Childhood Game.cpp  1021 - Painful Bases.cpp  1022 - Circle in Square.cpp  1025 - The Specials Menu.cpp  1028 - Trailing Zeroes (I).cpp  1032 - Fast Bit Calculations.cpp  1033 - Generating Palindromes.cpp  1035 - Intelligent Factorial Factorization.cpp  1043 - Triangle Partitioning.cpp  1044 - Palindrome Partitioning.cpp  1045 - Digits of Factorial.cpp  1047 - Neighbor House.cpp  1053 - Higher Math.cpp  1056 - Olympics.cpp  1062 - Crossed Ladders.cpp  (+55 more)
(+39 files in other folders)
